# clcoevt_py

./: README.md  Taskfile.yml  noxfile-package.py  noxfile.py  pyproject.toml
src/clcoevt/: clcoevt.py  cmdline_config.py  cmdopts_config.py  envvar_config.py  message.py  tomlfile_config.py
src/clcoevt_py/: cmdline_config.py  common.py  envvar_config.py  message.py
test/: test_clcoevt.py  test_cmdline_config.py  test_cmdopts_config.py  test_envvar_config.py  test_tomlfile_config.py
test-data/: false.toml  invalid.toml  negative_int.toml  test-package.toml  true.toml  unmatch-type_bool-value_string.toml  unmatch-type_int-value_bool.toml  unmatch-type_int-value_string.toml  unmatch-type_string-value_bool.toml  unmatch-type_string-value_int.toml  valid.toml
test_package/: test_package.py
